# routes/user.js
@@ -6,23 +6,22 @@ const passport = require('passport')
 
 
 
-router.post('/emailverificationforsignup',user.emailverification)//------done
+router.post('/emailverificationforsignup',user.emailverification)//------done==
 router.post('/signup',user.signup);//-------done
 router.post('/login',checkNotAuthenticate,passport.authenticate('local',{}),user.login);//-----done
 // router.post('/loginwithfacebook',user.loginwithfacebook);
-router.post('/resetpasswordtoken',user.resetpasswordtoken)//---done
-router.post('/resetpassword',user.resetpassword);//-------------done
-router.put('/changepassword',checkAuthenticate,user.changepassword);//-----------done
-router.delete('/logout',checkAuthenticate,user.logout);//---------------done
-router.post('/uploadimage',checkAuthenticate,upload.uploadimage);//-----done
+router.post('/resetpasswordtoken',user.resetpasswordtoken)//---done==
+router.post('/resetpassword',user.resetpassword);//-------------done==
+router.put('/changepassword',checkAuthenticate,user.changepassword);//-----------done==
+router.delete('/logout',checkAuthenticate,user.logout);//---------------done==
+router.post('/uploadimage',checkAuthenticate,upload.uploadimage);//-----done====
 router.put('/createchatroom',checkAuthenticate,user.createchatroom);
-// router.get('/getuserprofile',user.getuserprofile)
-router.post('/searchuser',checkAuthenticate,user.searchuser)
-// router.post('/inviteuser',user.inviteuser);
+router.post('/searchuser',checkAuthenticate,user.searchuser)//============done==
+router.post('/inviteuser',user.inviteuser);
 router.put('/deletechatroom',checkAuthenticate,user.deletechatroom);
 router.get('/accesschatrooms',checkAuthenticate,user.accesschatrooms);
-router.put('/edituserprofile',checkAuthenticate, user.edituserprofile);//-----done
-// router.post('/newmassege',user.newmessage);
+router.put('/edituserprofile',checkAuthenticate, user.edituserprofile);//-----done===
+router.put('/addusers',user.addusers);
 // router.get('/chatmessages',user.chatmessages);
 
 
